--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install pillow --use-deprecated=legacy-resolver
+pillow --use-deprecated=legacy-resolver
 streamlit==1.26.0
 pandas==2.1.1
 google-generativeai
