--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pillow
-streamlit==1.26.0
-pandas==2.1.1
-google-generativeai
-pymupdf
-xlsxwriter
+pillow==10.4.0
+streamlit==1.38.0
+pandas==2.2.2
+google-generativeai==0.8.3
+pymupdf==1.24.14
+xlsxwriter==3.2.0
